# groundfield

./: .audit-pass-4-5-commit-msg.txt  .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  profile.out  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
adr/0001-two-layer-method/: index.html
adr/0002-engine-family/: index.html
adr/0003-distributed-conductor-model/: index.html
adr/0004-inductive-coupling/: index.html
adr/0005-carson-earth-return/: index.html
adr/0006-sommerfeld-earth-return/: index.html
adr/0007-cross-layer-electrodes/: index.html
adr/0008-groundinsight-bridge/: index.html
adr/0009-world-generators/: index.html
adr/0010-tier0-performance/: index.html
adr/0011-osm-building-footprints/: index.html
adr/0012-foundation-concrete-encasement/: index.html
api/: index.html
api/conductors/: index.html
api/coupling/: index.html
api/diagnostics/: index.html
api/generators/: index.html
api/geo/: index.html
api/geometry/: index.html
api/io/: index.html
api/postprocess/: index.html
api/soil/: index.html
api/solver/: index.html
concepts/: index.html
docs/: concepts.md  graphify.md  index.md  installation.md  performance.md  quickstart.md
docs/adr/: 0001-two-layer-method.md  0002-engine-family.md  0003-distributed-conductor-model.md  0004-inductive-coupling.md  0005-carson-earth-return.md  0006-sommerfeld-earth-return.md  0007-cross-layer-electrodes.md  0008-groundinsight-bridge.md  0009-world-generators.md  0010-tier0-performance.md  0011-osm-building-footprints.md  0012-foundation-concrete-encasement.md
docs/api/: conductors.md  coupling.md  diagnostics.md  generators.md  geo.md  geometry.md  index.md  io.md  postprocess.md  soil.md  solver.md
docs/engines/: bem.md  cim.md  fem.md  image.md  image_2layer.md  image_nlayer.md  index.md  mom.md  mom_sommerfeld.md
docs/examples/: 01_first_solve.md  02_substation_dwight.md  03_tn_network_basics.md  04_grounding_measurement.md  05_inductive_coupling.md  06_parameter_sweep_soil.md  07_monte_carlo.md  08_pipeline_groundinsight.md  09_osm_pipeline.md  index.md
docs/javascripts/: mathjax.js
engines/: index.html
engines/bem/: index.html
engines/cim/: index.html
engines/fem/: index.html
engines/image/: index.html
engines/image_2layer/: index.html
engines/image_nlayer/: index.html
engines/mom/: index.html
engines/mom_sommerfeld/: index.html
examples/: index.html
examples/01_first_solve/: index.html
examples/02_substation_dwight/: index.html
examples/03_tn_network_basics/: index.html
examples/04_grounding_measurement/: index.html
examples/05_inductive_coupling/: index.html
examples/06_parameter_sweep_soil/: index.html
examples/07_monte_carlo/: index.html
examples/08_pipeline_groundinsight/: index.html
examples/09_osm_pipeline/: index.html
graphify/: index.html
installation/: index.html
notebooks/: README.md
performance/: index.html
quickstart/: index.html
scripts/: __init__.py  generate_graphify_report.py  generate_third_party_licenses.py  release.py
scripts/benchmarks/: pen_1km_carson.py
search/: search_index.json
src/groundfield/: __init__.py  api.py  boundary.py  diagnostics.py  sources.py  validation.py  world.py
src/groundfield/conductors/: __init__.py  conductor.py
src/groundfield/coupling/: __init__.py  carson.py  inductance.py  layered_green.py  sommerfeld_inductance.py
src/groundfield/generators/: __init__.py  base.py  building.py  distributions.py  electrode_specs.py  grounding.py  measurement.py  placement.py  soil_specs.py  tn_network.py  tn_ortsnetz.py
src/groundfield/geo/: __init__.py  footprint.py  osm.py  placement.py  projection.py
src/groundfield/geometry/: __init__.py  electrodes.py  primitives.py
src/groundfield/io/: __init__.py  csv.py  groundinsight.py  vtk.py
src/groundfield/postprocess/: __init__.py  convergence.py  current_balance.py  geometry_plot.py  plotting.py  rho_f_standard.py  safety.py  sweep.py  vector_fitting.py
src/groundfield/references/: __init__.py  carson.py  dwight1936.py  oeding.py
src/groundfield/soil/: __init__.py  models.py
src/groundfield/solver/: __init__.py  _layered.py  bem.py  cim.py  engine.py  fem.py  field_study.py  image.py  image_2layer.py  image_nlayer.py  mom.py  mom_sommerfeld.py  result.py
src/groundfield/utils/: __init__.py  logging.py
tests/: test_api_smoke.py  test_audit_pass4_fixes.py  test_audit_pass5_fixes.py  test_bem.py  test_carson_coupling.py  test_cim.py  test_compare_engines.py  test_concrete_encasement.py  test_conductors_distributed.py  test_conductors_finite.py  test_convergence.py  test_cross_engines.py  test_cross_engines_extended.py  test_cross_layer.py  test_current_balance.py  test_diagnostics.py  test_distributions.py  test_dwight_references.py  test_fem.py  test_generators_base.py  test_geo_footprint.py  test_geo_osm.py  test_geo_placement.py  test_geometry_plot.py  test_grid_mesh.py  test_grounding.py  test_image_nlayer.py  test_import.py  test_inductance_vectorised.py  test_inductive_coupling.py  test_io_csv.py  test_io_groundinsight.py  test_io_vtk.py  test_measurement.py  test_mom_sommerfeld.py  test_oeding_inductance.py  test_placement.py  test_rho_f_standard.py  test_safety.py  test_soil_specs.py  (+6 more)
