[tool.poetry]
name = "groundfield"
version = "0.1.0"
description = "Numerische Feldberechnung von Erdungsanlagen (PDE-/Feldmodell, Kopplung zu groundinsight)"
authors = ["Christian Ehlert <christian.ehlert@mailbox.org>"]
license = "MIT"
repository = "https://github.com/Ce1ectric/groundfield"
documentation = "https://ce1ectric.github.io/groundfield/"
readme = "README.md"
packages = [
    { include = "groundfield", from = "src" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
numpy = "^2.1.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
polars = "^1.5.0"
sympy = "^1.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = { extras = ["python"], version = "^0.26.1" }
pymdown-extensions = "^10.9"
mkdocs-jupyter = "^0.25.0"

[tool.poetry.scripts]
release = "scripts.release:main"
generate-third-party-licenses = "scripts.generate_third_party_licenses:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
