[tool.poetry]
name = "groundfield"
version = "0.5.0"
description = "Numerical field computation for grounding systems (PDE / field model, coupling to groundinsight)"
authors = ["Christian Ehlert <christian.ehlert@mailbox.org>"]
license = "MIT"
repository = "https://github.com/Ce1ectric/groundfield"
documentation = "https://ce1ectric.github.io/groundfield/"
readme = "README.md"
packages = [
    { include = "groundfield", from = "src" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
numpy = "^2.1.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
polars = "^1.5.0"
sympy = "^1.13.2"
pandas = "^3.0.2"
# Optional: bridge to the sister project ``groundinsight``. When this
# extra is installed, ``groundfield.io.groundinsight.to_bustype`` /
# ``save_bustype_to_db`` can return a live ``BusType`` instance and
# write into the ``groundinsight`` SQLite store. The JSON export path
# (``save_bustype_json`` / ``load_bustype_json``) does not require
# this extra. See ADR-0008.
groundinsight = { version = ">=0.3", optional = true }
# Optional dependencies for ``groundfield.geo`` (OpenStreetMap
# building-footprint ingest via Overpass, WGS84 -> local ENU
# projection, polygon geometry). The core install does not depend on
# these; ``groundfield.geo`` raises a clear ``ImportError`` with an
# install hint when called without the ``geo`` extra. See ADR-0011.
requests = { version = "^2.32", optional = true }
shapely = { version = "^2.0", optional = true }
pyproj = { version = "^3.6", optional = true }

[tool.poetry.extras]
groundinsight = ["groundinsight"]
geo = ["requests", "shapely", "pyproj"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
# ``groundinsight`` is pulled into the dev group so the bridge tests
# in ``tests/test_io_groundinsight.py`` can run end-to-end against
# the consumer's real Pydantic + SymPy parser. Keeps the runtime
# dependency optional (see ``[tool.poetry.extras]``).
groundinsight = ">=0.3"
# Same logic for the ``geo`` extra: pulled into dev so the OSM /
# footprint tests in ``tests/test_geo_*.py`` run end-to-end. Keeps
# the runtime dependencies optional. See ADR-0011.
requests = "^2.32"
shapely = "^2.0"
pyproj = "^3.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = { extras = ["python"], version = "^0.26.1" }
pymdown-extensions = "^10.9"
mkdocs-jupyter = "^0.25.0"

[tool.poetry.scripts]
release = "scripts.release:main"
generate-third-party-licenses = "scripts.generate_third_party_licenses:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
